--- a/index.html
+++ b/index.html
@@ -118,17 +118,17 @@ li.dropdown
 <body>
 <div>
 	<ul>
-		<li><a href = "index.htm">Home</a></li>
-		<li><a href = "music.htm">Music</a></li>
+		<li><a href = "index.html">Home</a></li>
+		<li><a href = "music.html">Music</a></li>
 		<li class = "dropdown">
-			<a href = "reeds.htm" class = "dropbtn">Buy Bassoon Reeds!</a>
+			<a href = "reeds.html" class = "dropbtn">Buy Bassoon Reeds!</a>
 			<div class = "dropdown-content">
-				<a href = "reeds.htm">How to purchase</a>
-				<a href = "reedinfo.htm">More info</a>
+				<a href = "reeds.html">How to purchase</a>
+				<a href = "reedinfo.html">More info</a>
 			</div>
 		</li>
-		<li style = "float:right"><a href = "contact.htm">Contact Me</a></li>
-		<li style = "float:right"><a href = "socials.htm">Socials</a></li>
+		<li style = "float:right"><a href = "contact.html">Contact Me</a></li>
+		<li style = "float:right"><a href = "socials.html">Socials</a></li>
 	</ul>
 </div>
 <br>
