renamed white river grand canyon from chinese to english

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <style>
 body
 {
-	background-image:url("白河大峡谷.jpg");
+	background-image:url("whiteRiverGrandCanyon.jpg");
 	background-repeat: no-repeat;
 	background-attachment: scroll;
 	background-size: 100%;
