Testing background pattern code

--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
 <style>
 body
 {
-	background-image:url("whiteRiverGrandCanyon.jpg");
-	background-repeat: no-repeat;
-	background-attachment: scroll;
-	background-size: 100%;
-	font-family: helvetica;
+	background-image:url("Background pattern.png");
+	background-repeat: space;
+	
 }
 ::-webkit-scrollbar
 {
