Moved navbar css out of <head> to separate style sheet in css folder

--- a/thanksforsubmission.html
+++ b/thanksforsubmission.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 	<title>Thank you!</title>
+	<link rel = "stylesheet" href = "css/navbar.css">
 </head>
 
 <body>
-<h1 style = "text-align:center;font-size:700%;">THANK YOU</h1>
+	<h1 style = "text-align:center;font-size:700%;">THANK YOU</h1>
 
-<p style = "text-align:center">for your submission</p>
+	<p style = "text-align:center">for your submission</p>
 </body>
 </html>
