--- a/contact.html
+++ b/contact.html
@@ -1,152 +1,93 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Contact Me</title>
-<style>
-body
-{
-	font-family: helvetica;
-}
-::-webkit-scrollbar
-{
-	width: 0 !important
-}
-ul
-{
-	list-style-type: none;
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	margin: 0;
-	padding: 0;
-	background-color: #000000;
-}
-li
-{
-	float: left;
-}
-li a, .dropbtn
-{
-	display: inline-block;
-	padding: 16px;
-	color: white;
-	text-align: center;
-	text-decoration: none;
-}
-
-li a:hover, .dropdown:hover .dropbtn
-{
-	background-color: #333333;
-}
-li.dropdown
-{
-	display: inline-block;
-}
-.dropdown-content
-{
-	display: none;
-	position: absolute;
-	background-color: #f4f4f4;
-	min-width: 160px;
-	box-shadow: 0px 8px 16px 8px rbga(0, 0, 0, 0.5);
-	z-index: 1;
-}
-.dropdown-content a
-{
-	color: black;
-	padding: 16px;
-	text-decoration: none;
-	display: block;
-	text-align: left;
-}
-.dropdown-content a:hover
-{
-	background-color: #999999;
-}
-.dropdown:hover .dropdown-content
-{
-	display: block;
-}
-
-form
-{
-	text-align: center;
-}
-textarea
-{
-	resize: none;
-	height: 100px;
-	width: 345px;
-}
-input, textarea
-{
-	outline: none;
-	border: 1px groove;
-}
-input:focus, textarea:focus
-{
-	box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
-	border: 0;
-}
-input:hover, textarea:hover
-{
-	background-color: #f4f4f4;
-}
-button
-{
-	border: 0;
-	width: 350px;
-	padding: 18px;
-	transition: 0.2s;
-}
-button:hover
-{
-	background-color: #999999;
-}
-</style>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Contact Me</title>
+	<link rel = "stylesheet" href = "css/navbar.css">
+	<style>
+	body
+	{
+		font-family: helvetica;
+	}
+	::-webkit-scrollbar
+	{
+		width: 0 !important
+	}
+	form
+	{
+		text-align: center;
+	}
+	textarea
+	{
+		resize: none;
+		height: 100px;
+		width: 345px;
+	}
+	input, textarea
+	{
+		outline: none;
+		border: 1px groove;
+	}
+	input:focus, textarea:focus
+	{
+		box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+		border: 0;
+	}
+	input:hover, textarea:hover
+	{
+		background-color: #f4f4f4;
+	}
+	button
+	{
+		border: 0;
+		width: 350px;
+		padding: 18px;
+		transition: 0.2s;
+	}
+	button:hover
+	{
+		background-color: #999999;
+	}
+	</style>
 </head>
 <body>
+	<ul>
+		<li><a href = "index.html">Home</a></li>
+		<li><a href = "music.html">Music</a></li>
+		<li class = "dropdown">
+			<a href = "reeds.html" class = "dropbtn">Buy Bassoon Reeds!</a>
+			<div class = "dropdown-content">
+				<a href = "reeds.html">How to purchase</a>
+				<a href = "reedinfo.html">More info</a>
+			</div>
+		</li>
+		<li style = "float:right"><a href = "contact.html">Contact Me</a></li>
+		<li style = "float:right"><a href = "socials.html">Socials</a></li>
+	</ul>
 
-<ul>
-	<li><a href = "index.html">Home</a></li>
-	<li><a href = "music.html">Music</a></li>
-	<li class = "dropdown">
-		<a href = "reeds.html" class = "dropbtn">Buy Bassoon Reeds!</a>
-		<div class = "dropdown-content">
-			<a href = "reeds.html">How to purchase</a>
-			<a href = "reedinfo.html">More info</a>
+	<br>
+	<br>
+
+	<h1 style = "text-align:center;font-size:700%;">CONTACT ME</h1>
+
+	<p style = "text-align:center"> this doesn't work yet don't type anything</p>
+
+	<form action = "contactform.php" name = "contactform" method = "post">
+		<input type = "text" name = "name" placeholder = "First and last name" required>
+		<input type = "email" name = "email" placeholder = "Email" required>
+		<br>
+		<br>
+		<br>
+		<div>
+			<textarea name = "message" placeholder = "Write your message here" required></textarea>
 		</div>
-	</li>
-	<li style = "float:right"><a href = "contact.html">Contact Me</a></li>
-	<li style = "float:right"><a href = "socials.html">Socials</a></li>
-</ul>
-
-<br>
-<br>
-
-<h1 style = "text-align:center;font-size:700%;">CONTACT ME</h1>
-
-<p style = "text-align:center"> this doesn't work yet don't type anything</p>
-
-<form action = "contactform.php" name = "contactform" method = "post">
-	<input type = "text" name = "name" placeholder = "First and last name" required>
-	<input type = "email" name = "email" placeholder = "Email" required>
-	<br>
-	<br>
-	<br>
-	<div>
-		<textarea name = "message" placeholder = "Write your message here" required></textarea>
-	</div>
-	<button type = "submit" name = "submit" style = "font-size:20px;font-weight:600">Send</button>
-</form>
-<script language="JavaScript">
-var frmvalidator  = new Validator("contactform");
-frmvalidator.addValidation("name","req","Please provide your name");
-frmvalidator.addValidation("email","req","Please provide your email");
-frmvalidator.addValidation("email","email", "Please enter a valid email address");
-</script>
-
+		<button type = "submit" name = "submit" style = "font-size:20px;font-weight:600">Send</button>
+	</form>
+	<script language="JavaScript">
+	var frmvalidator  = new Validator("contactform");
+	frmvalidator.addValidation("name","req","Please provide your name");
+	frmvalidator.addValidation("email","req","Please provide your email");
+	frmvalidator.addValidation("email","email", "Please enter a valid email address");
+	</script>
 </body>
 </html>
