--- a/index.html
+++ b/index.html
@@ -1,172 +1,98 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Home</title>
-<style>
-body
-{
-	background-image:url("bkgndrotated.png");
-  background-position:0px 1000px;
-  background-repeat: space;
-  background-color: #C1DAE9;
-}
-::-webkit-scrollbar
-{
-	width: 0 !important
-}
-ul
-{
-  list-style-type: none;
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	margin: 0;
-	padding: 0;
-	background-color: #000000;
-	z-index: 1;
-  transition: 0.5s;
-  opacity: 0;
-}
-ul:hover
-{
-  opacity: 1;
-}
-li
-{
-	float: left;
-}
-li a, .dropbtn
-{
-	display: inline-block;
-	padding: 16px;
-	color: white;
-	text-align: center;
-	text-decoration: none;
-}
-li a:hover, .dropdown:hover .dropbtn
-{
-	background-color: #333333;
-}
-li.dropdown
-{
-	display: inline-block;
-}
-.dropdown-content
-{
-	display: none;
-	position: absolute;
-	background-color: #f4f4f4;
-	min-width: 160px;
-	box-shadow: 0px 8px 16px 8px rbga(0, 0, 0, 0.5);
-	z-index: 1;
-}
-.dropdown-content a
-{
-	color: black;
-	padding: 16px;
-	text-decoration: none;
-	display: block;
-	text-align: left;
-}
-.dropdown-content a:hover
-{
-	background-color: #999999;
-}
-.dropdown:hover .dropdown-content
-{
-	display: block;
-  transition: 0.5s;
-}
-.left
-{
-	position: fixed;
-	left: 50%
-}
-.left .wrapper
-{
-	position: relative;
-	left: -50%;
-}
-.menuicon
-{
-  width: 35px;
-  height: 3px;
-  background-color: #999999;
-  margin: 8px 0;
-}
-.menuicon:hover
-{
-		/*background-color: #333333;*/
-}
-#menuicon
-{
-  float: right;
-	margin: -0.2% 1%;
-	opacity: 1;
-	transition: 0.5s;
-}
-#menuicon:hover
-{
-	background-color: #333333;
-}
-#welcome
-{
-	display: inline-block;
-	text-align: center;
-	font-size: 700%;
-	position: relative;
-	left: 50%;
-	transform: translateX(-50%) translateY(75%);
-	transition: 0.5s;
-}
-#name
-{
-	width: 10%;
-	display: block;
- 	margin-left: auto;
-  	margin-right: auto;
-	opacity: 0;
-  transform: translateY(200%);
-	transition: 0.5s;
-}
-#welcome:hover
-{
-	opacity: 0;
-}
-#name:hover
-{
-	opacity: 1;
-}
-</style>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Home</title>
+	<link rel = "stylesheet" href = "css/navbar.css">
+	<style>
+	body
+	{
+		background-image:url("bkgndrotated.png");
+	  background-position:0px 1000px;
+	  background-repeat: space;
+	  background-color: #C1DAE9;
+	}
+	::-webkit-scrollbar
+	{
+		width: 0 !important
+	}
+	.menuicon
+	{
+	  width: 35px;
+	  height: 3px;
+	  background-color: #999999;
+	  margin: 8px 0;
+	}
+	.menuicon:hover
+	{
+			/*background-color: #333333;*/
+	}
+	#menuicon
+	{
+	  float: right;
+		margin: -0.2% 1%;
+		opacity: 1;
+		transition: 0.5s;
+	}
+	#menuicon:hover
+	{
+		background-color: #333333;
+	}
+	#welcome
+	{
+		display: inline-block;
+		text-align: center;
+		font-size: 700%;
+		position: relative;
+		left: 50%;
+		transform: translateX(-50%) translateY(75%);
+		transition: 0.5s;
+	}
+	#name
+	{
+		width: 10%;
+		display: block;
+	 	margin-left: auto;
+	  	margin-right: auto;
+		opacity: 0;
+	  transform: translateY(200%);
+		transition: 0.5s;
+	}
+	#welcome:hover
+	{
+		opacity: 0;
+	}
+	#name:hover
+	{
+		opacity: 1;
+	}
+	</style>
 </head>
-
 <body>
-<div>
-	<ul>
-		<li><a href = "index.html">Home</a></li>
-		<li><a href = "music.html">Music</a></li>
-		<li class = "dropdown">
-			<a href = "reeds.html" class = "dropbtn">Buy Bassoon Reeds!</a>
-			<div class = "dropdown-content">
-				<a href = "reeds.html">How to purchase</a>
-				<a href = "reedinfo.html">More info</a>
-			</div>
-		</li>
-		<li style = "float:right"><a href = "contact.html">Contact Me</a></li>
-		<li style = "float:right"><a href = "socials.html">Socials</a></li>
-	</ul>
-</div>
-<div id = "menuicon" >
-  <div class = "menuicon"></div>
-  <div class = "menuicon"></div>
-  <div class = "menuicon"></div>
-</div>
-<br>
-<div id = "main">
-<h1 id = "welcome">WELCOME</h1>
-<img id = "name" src = "Signature.png">
-</div>
+	<div>
+		<ul>
+			<li><a href = "index.html">Home</a></li>
+			<li><a href = "music.html">Music</a></li>
+			<li class = "dropdown">
+				<a href = "reeds.html" class = "dropbtn">Buy Bassoon Reeds!</a>
+				<div class = "dropdown-content">
+					<a href = "reeds.html">How to purchase</a>
+					<a href = "reedinfo.html">More info</a>
+				</div>
+			</li>
+			<li style = "float:right"><a href = "contact.html">Contact Me</a></li>
+			<li style = "float:right"><a href = "socials.html">Socials</a></li>
+		</ul>
+	</div>
+	<div id = "menuicon" >
+	  <div class = "menuicon"></div>
+	  <div class = "menuicon"></div>
+	  <div class = "menuicon"></div>
+	</div>
+	<br>
+	<div id = "main">
+	<h1 id = "welcome">WELCOME</h1>
+	<img id = "name" src = "Signature.png">
+	</div>
 </body>
 </html>
