--- a/socials.html
+++ b/socials.html
@@ -3,6 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Socials</title>
+<link rel = "stylesheet" href = "css/navbar.css">
 <style>
 body
 {
@@ -11,63 +12,6 @@ body
 ::-webkit-scrollbar
 {
 	width: 0 !important
-}
-ul
-{
-	list-style-type: none;
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	margin: 0;
-	padding: 0;
-	background-color: #000000;
-}
-li
-{
-	float: left;
-}
-li a, .dropbtn
-{
-	display: inline-block;
-	padding: 16px;
-	color: white;
-	text-align: center;
-	text-decoration: none;
-}
-
-li a:hover, .dropdown:hover .dropbtn
-{
-	background-color: #333333;
-}
-li.dropdown
-{
-	display: inline-block;
-}
-.dropdown-content
-{
-	display: none;
-	position: absolute;
-	background-color: #f4f4f4;
-	min-width: 160px;
-	box-shadow: 0px 8px 16px 8px rbga(0, 0, 0, 0.5);
-	z-index: 1;
-}
-.dropdown-content a
-{
-	color: black;
-	padding: 16px;
-	text-decoration: none;
-	display: block;
-	text-align: left;
-}
-.dropdown-content a:hover
-{
-	background-color: #999999;
-}
-.dropdown:hover .dropdown-content
-{
-	display: block;
 }
 img.Socialmap
 {
