Moved images to img folder, made all img names lowercase

--- a/reeds.html
+++ b/reeds.html
@@ -82,6 +82,6 @@
 	<br>
 	<br>
 	<br>
-	<a class = "info" href = "reedinfo.htm">More about my reeds</a>
+	<a class = "info" href = "reedinfo.html">More about my reeds</a>
 </body>
 </html>
