--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<style>
 	body
 	{
-		background-image:url("bkgndrotated.png");
+		background-image:url("img/bknd3.png");
 	  background-position:0px 1000px;
 	  background-repeat: space;
 	  background-color: #C1DAE9;
@@ -92,7 +92,7 @@
 	<br>
 	<div id = "main">
 	<h1 id = "welcome">WELCOME</h1>
-	<img id = "name" src = "Signature.png">
+	<img id = "name" src = "img/signature.png">
 	</div>
 </body>
 </html>
