--- a/socials.html
+++ b/socials.html
@@ -64,7 +64,7 @@ footer:hover
 <br>
 <br>
 <br>
-<img class = "Socialmap" src="Socialmap.png" alt="Socials" usemap="#Socialmap">
+<img class = "Socialmap" src="img/socialmap.png" alt="Socials" usemap="#Socialmap">
 <map name="Socialmap">
     <area target="_blank" alt="Youtube" title="Youtube" href="https://m.youtube.com/channel/UC7yNY3Pla4gboKdtLUVT_iQ" coords="499,194,284,64" shape="rect">
     <area target="_blank" alt="Instagram" title="Instagram" href="https://www.instagram.com/turbo_zlurp/" coords="810,188,669,40" shape="rect">
