Moved background css from <head> to css folder

--- a/index.html
+++ b/index.html
@@ -3,15 +3,9 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Home</title>
+	<link rel = "stylesheet" href = "css/bknd.css">
 	<link rel = "stylesheet" href = "css/navbar.css">
 	<style>
-	body
-	{
-		background-image:url("img/bknd3.png");
-	  background-position:0px 1000px;
-	  background-repeat: space;
-	  background-color: #C1DAE9;
-	}
 	::-webkit-scrollbar
 	{
 		width: 0 !important
