--- a/thanksforsubmission.html
+++ b/thanksforsubmission.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Thank you!</title>
+	<link rel = "stylesheet" href = "css/bknd.css">
 	<link rel = "stylesheet" href = "css/navbar.css">
 </head>
 
