Moved background css to stylesheet, as well as the menuicon css. Figured out that the repeat-space wasn't working simply because the music and reedinfo pages weren't long enough to have the pattern repeat since the placeholder text was at the very top

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Contact Me</title>
 	<link rel = "stylesheet" href = "css/bknd.css">
+	<link rel = "stylesheet" href = "css/menuicon.css">
 	<link rel = "stylesheet" href = "css/navbar.css">
 	<style>
 	body
@@ -65,6 +66,11 @@
 		<li style = "float:right"><a href = "contact.html">Contact Me</a></li>
 		<li style = "float:right"><a href = "socials.html">Socials</a></li>
 	</ul>
+	<div id = "menuicon" >
+	  <div class = "menuicon"></div>
+	  <div class = "menuicon"></div>
+	  <div class = "menuicon"></div>
+	</div>
 
 	<br>
 	<br>
