--- a/reeds.html
+++ b/reeds.html
@@ -4,12 +4,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Buy reeds!</title>
 	<link rel = "stylesheet" href = "css/bknd.css">
+	<link rel = "stylesheet" href = "css/menuicon.css">
 	<link rel = "stylesheet" href = "css/navbar.css">
 	<style>
-	body
-	{
-		font-family: helvetica;
-	}
 	::-webkit-scrollbar
 	{
 		width: 0 !important
@@ -55,6 +52,11 @@
 		<li style = "float:right"><a href = "contact.html">Contact Me</a></li>
 		<li style = "float:right"><a href = "socials.html">Socials</a></li>
 	</ul>
+	<div id = "menuicon" >
+	  <div class = "menuicon"></div>
+	  <div class = "menuicon"></div>
+	  <div class = "menuicon"></div>
+	</div>
 	<br>
 	<h1 style = "text-align:center;font-size:700%;">BUY REEDS!</h1>
 
@@ -80,7 +82,6 @@
 	<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 	<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 	</form>
-	<br>
 	<br>
 	<br>
 	<a class = "info" href = "reedinfo.html">More about my reeds</a>
