--- a/thanksforsubmission.html
+++ b/thanksforsubmission.html
@@ -3,10 +3,16 @@
 <head>
 	<title>Thank you!</title>
 	<link rel = "stylesheet" href = "css/bknd.css">
+	<link rel = "stylesheet" href = "css/menuicon.css">
 	<link rel = "stylesheet" href = "css/navbar.css">
 </head>
 
 <body>
+	<div id = "menuicon" >
+	  <div class = "menuicon"></div>
+	  <div class = "menuicon"></div>
+	  <div class = "menuicon"></div>
+	</div>
 	<h1 style = "text-align:center;font-size:700%;">THANK YOU</h1>
 
 	<p style = "text-align:center">for your submission</p>
