--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Home</title>
 	<link rel = "stylesheet" href = "css/bknd.css">
+	<link rel = "stylesheet" href = "css/menuicon.css">
 	<link rel = "stylesheet" href = "css/navbar.css">
 	<style>
 	::-webkit-scrollbar
@@ -19,18 +20,18 @@
 	}
 	.menuicon:hover
 	{
-			/*background-color: #333333;*/
+	    /*background-color: #333333;*/
 	}
 	#menuicon
 	{
 	  float: right;
-		margin: -0.2% 1%;
-		opacity: 1;
-		transition: 0.5s;
+	  margin: -0.2% 1%;
+	  opacity: 1;
+	  transition: 0.5s;
 	}
 	#menuicon:hover
 	{
-		background-color: #333333;
+	  background-color: #333333;
 	}
 	#welcome
 	{
@@ -83,7 +84,6 @@
 	  <div class = "menuicon"></div>
 	  <div class = "menuicon"></div>
 	</div>
-	<br>
 	<div id = "main">
 	<h1 id = "welcome">WELCOME</h1>
 	<img id = "name" src = "img/signature.png">
