--- a/music.html
+++ b/music.html
@@ -2,14 +2,11 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Music</title>
+	<title>music</title>
 	<link rel = "stylesheet" href = "css/bknd.css">
+	<link rel = "stylesheet" href = "css/menuicon.css">
 	<link rel = "stylesheet" href = "css/navbar.css">
 	<style>
-	body
-	{
-		font-family: helvetica;
-	}
 	::-webkit-scrollbar
 	{
 		width: 0 !important
@@ -30,8 +27,12 @@
 		<li style = "float:right"><a href = "contact.html">Contact Me</a></li>
 		<li style = "float:right"><a href = "socials.html">Socials</a></li>
 	</ul>
-	<br>
-	<br>
-	<p> music </p>
+	<div id = "menuicon" >
+	  <div class = "menuicon"></div>
+	  <div class = "menuicon"></div>
+	  <div class = "menuicon"></div>
+	</div>
+
+	<p style = "position: absolute"> new page </p>
 </body>
 </html>
