--- a/reedinfo.html
+++ b/reedinfo.html
@@ -4,12 +4,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Reed Info</title>
 	<link rel = "stylesheet" href = "css/bknd.css">
+	<link rel = "stylesheet" href = "css/menuicon.css">
 	<link rel = "stylesheet" href = "css/navbar.css">
 	<style>
-	body
-	{
-		font-family: helvetica;
-	}
 	::-webkit-scrollbar
 	{
 		width: 0 !important
@@ -30,6 +27,11 @@
 		<li style = "float:right"><a href = "contact.html">Contact Me</a></li>
 		<li style = "float:right"><a href = "socials.html">Socials</a></li>
 	</ul>
+	<div id = "menuicon" >
+	  <div class = "menuicon"></div>
+	  <div class = "menuicon"></div>
+	  <div class = "menuicon"></div>
+	</div>
 	<br>
 	<br>
 	<p> more info </p>
