--- a/socials.html
+++ b/socials.html
@@ -4,12 +4,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Socials</title>
 <link rel = "stylesheet" href = "css/bknd.css">
+<link rel = "stylesheet" href = "css/menuicon.css">
 <link rel = "stylesheet" href = "css/navbar.css">
 <style>
-body
-{
-	font-family: helvetica;
-}
 ::-webkit-scrollbar
 {
 	width: 0 !important
@@ -56,6 +53,11 @@ footer:hover
 		<li style = "float:right"><a href = "contact.html">Contact Me</a></li>
 		<li style = "float:right"><a href = "socials.html">Socials</a></li>
 	</ul>
+	<div id = "menuicon" >
+	  <div class = "menuicon"></div>
+	  <div class = "menuicon"></div>
+	  <div class = "menuicon"></div>
+	</div>
 </div>
 <br>
 <br>
