got rid of background pattern

--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,16 @@
 	{
 		width: 0 !important
 	}
+	h1
+	{
+		display: inline-block;
+		text-align: center;
+		font-size: 700%;
+		position: relative;
+		left: 50%;
+		transform: translateX(-50%) translateY(75%);
+		transition: 0.5s;
+	}
 	form
 	{
 		text-align: center;
@@ -71,11 +81,7 @@
 	  <div class = "menuicon"></div>
 	  <div class = "menuicon"></div>
 	</div>
-
-	<br>
-	<br>
-
-	<h1 style = "text-align:center;font-size:700%;">CONTACT ME</h1>
+	<h1>CONTACT ME</h1>
 
 	<p style = "text-align:center"> this doesn't work yet don't type anything</p>
 
