--- a/music.html
+++ b/music.html
@@ -33,6 +33,6 @@
 	  <div class = "menuicon"></div>
 	</div>
 
-	<p style = "position: absolute"> new page </p>
+	<p> new page </p>
 </body>
 </html>
