--- a/reeds.html
+++ b/reeds.html
@@ -11,6 +11,16 @@
 	{
 		width: 0 !important
 	}
+	h1
+	{
+	display: inline-block;
+	text-align: center;
+	font-size: 700%;
+	position: relative;
+	left: 50%;
+	transform: translateX(-50%) translateY(75%);
+	transition: 0.5s;
+	}
 	form.paypal
 	{
 		text-align: center;
@@ -57,23 +67,16 @@
 	  <div class = "menuicon"></div>
 	  <div class = "menuicon"></div>
 	</div>
-	<br>
-	<h1 style = "text-align:center;font-size:700%;">BUY REEDS!</h1>
+	<h1>BUY REEDS!</h1>
 
 	<h2 style = "text-align:center;">High quality reeds for a only $15 each.</h2>
 	<p style = "text-align:center;"><i>In person delivery available in Salem, OR</i></p>
-	<br>
-	<br>
-	<br>
-	<h1 style = "text-align:center;">
+	<h2 style = "text-align:center;">
 		HOW TO BUY
-	</h1>
+	</h2>
 	<p style = "text-align:center;">
 		Send an email at <b>teddyaolinezhang@gmail.com</b> that contains: <br>name, <br> number of reeds, <br> delivery method (pick-up location or delivery address), <br> questions
-		<br>
-		<br>
 		Then, send payment through PayPal:
-		<br>
 	</p>
 
 	<form class = "paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
