--- a/reedinfo.html
+++ b/reedinfo.html
@@ -14,7 +14,7 @@
 	</style>
 </head>
 <body>
-	<ul>
+	<ul id = "navBar">
 		<li><a href = "index.html">Home</a></li>
 		<li><a href = "music.html">Music</a></li>
 		<li class = "dropdown">
