--- a/reeds.html
+++ b/reeds.html
@@ -49,7 +49,7 @@
 	</style>
 </head>
 <body>
-	<ul>
+	<ul id = "navBar">
 		<li><a href = "index.html">Home</a></li>
 		<li><a href = "music.html">Music</a></li>
 		<li class = "dropdown">
