--- a/socials.html
+++ b/socials.html
@@ -40,7 +40,7 @@ footer:hover
 </head>
 <body>
 <div>
-	<ul>
+	<ul id = "navBar">
 		<li><a href = "index.html">Home</a></li>
 		<li><a href = "music.html">Music</a></li>
 		<li class = "dropdown">
