got rid of unessecary scrollbar, tried (unsuccessfully) to fix navbar slide in animation positioning

--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,11 @@
 	{
 		font-family: helvetica;
 	}
+	/* Not necessary if there isn't extra content below the page
 	::-webkit-scrollbar
 	{
 		width: 0 !important
-	}
+	} */
 	h1
 	{
 		display: inline-block;
