--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 	<link rel = "stylesheet" href = "css/menuicon.css">
 	<link rel = "stylesheet" href = "css/navbar.css">
 	<style>
+	/* Not necessary if there isn't extra content below the page
 	::-webkit-scrollbar
 	{
 		width: 0 !important
-	}
+	} */
 
 	#welcome
 	{
@@ -61,7 +62,6 @@
 	<img id = menuicon src = "img/menuicon.png">
 	<h1 id = "welcome">WELCOME</h1>
 	<img id = "name" src = "img/signature.png">
-
 	<script src = "js/navbar.js"></script>
 
 </body>
