--- a/reedinfo.html
+++ b/reedinfo.html
@@ -7,10 +7,11 @@
 	<link rel = "stylesheet" href = "css/menuicon.css">
 	<link rel = "stylesheet" href = "css/navbar.css">
 	<style>
+	/* Not necessary if there isn't extra content below the page
 	::-webkit-scrollbar
 	{
 		width: 0 !important
-	}
+	} */
 	</style>
 </head>
 <body>
