Created performance, bassoon zone, and reeds pages under music page, got rid of reeds/reedinfo button on navbar, added some youtube to performances, disabled navbar animation (for now)

--- a/performances.html
+++ b/performances.html
@@ -33,6 +33,8 @@
 	  <div class = "menuicon"></div>
 	  <div class = "menuicon"></div>
 	</div>
+	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/maD3__fj6F4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 
 </body>
 </html>
