--- a/reeds.html
+++ b/reeds.html
@@ -7,11 +7,10 @@
 	<link rel = "stylesheet" href = "css/menuicon.css">
 	<link rel = "stylesheet" href = "css/navbar.css">
 	<style>
-	/* Not necessary if there isn't extra content below the page
 	::-webkit-scrollbar
 	{
 		width: 0 !important
-	} */
+	}
 	h1
 	{
 	display: inline-block;
@@ -52,13 +51,12 @@
 <body>
 	<ul id = "navBar">
 		<li><a href = "index.html">Home</a></li>
-		<li><a href = "music.html">Music</a></li>
 		<li class = "dropdown">
-			<a href = "reeds.html" class = "dropbtn">Buy Bassoon Reeds!</a>
+			<a href = "music.html" class = "dropbtn">Music</a>
 			<div class = "dropdown-content">
-				<a href = "reeds.html">How to purchase</a>
-				<a href = "reedinfo.html">More info</a>
-			</div>
+				<a href = "performances.html">Performances</a>
+				<a href = "bassoonZone.html">Bassoon Zone</a>
+				<a href = "reeds.html">Reeds</a>
 		</li>
 		<li style = "float:right"><a href = "contact.html">Contact Me</a></li>
 		<li style = "float:right"><a href = "socials.html">Socials</a></li>
@@ -88,6 +86,6 @@
 	</form>
 	<br>
 	<br>
-	<a class = "info" href = "reedinfo.html">More about my reeds</a>
+	<!-- <a class = "info" href = "reedinfo.html">More about my reeds</a> -->
 </body>
 </html>
