--- a/socials.html
+++ b/socials.html
@@ -43,13 +43,12 @@ footer:hover
 <div>
 	<ul id = "navBar">
 		<li><a href = "index.html">Home</a></li>
-		<li><a href = "music.html">Music</a></li>
 		<li class = "dropdown">
-			<a href = "reeds.html" class = "dropbtn">Buy Bassoon Reeds!</a>
+			<a href = "music.html" class = "dropbtn">Music</a>
 			<div class = "dropdown-content">
-				<a href = "reeds.html">How to purchase</a>
-				<a href = "reedinfo.html">More info</a>
-			</div>
+				<a href = "performances.html">Performances</a>
+				<a href = "bassoonZone.html">Bassoon Zone</a>
+				<a href = "reeds.html">Reeds</a>
 		</li>
 		<li style = "float:right"><a href = "contact.html">Contact Me</a></li>
 		<li style = "float:right"><a href = "socials.html">Socials</a></li>
