--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	<img id = menuicon src = "img/menuicon.png">
 	<h1 id = "welcome">WELCOME</h1>
 	<img id = "name" src = "img/signature.png">
-	<script src = "js/navbar.js"></script>
+	<!-- <script src = "js/navbar.js"></script> -->
 
 </body>
 </html>
