--- a/performances.html
+++ b/performances.html
@@ -7,14 +7,15 @@
 	<link rel = "stylesheet" href = "css/menuicon.css">
 	<link rel = "stylesheet" href = "css/navbar.css">
 	<link rel = "stylesheet" href = "css/youtube.css">
-	<style>
+	<!-- <style>
 	/* Not necessary if there isn't extra content below the page
 	::-webkit-scrollbar
 	{
 		width: 0 !important
 	} */
-	</style>
+	</style> -->
 </head>
+
 <body>
 	<ul id = "navBar">
 		<li><a href = "index.html">Home</a></li>
@@ -33,8 +34,13 @@
 	  <div class = "menuicon"></div>
 	  <div class = "menuicon"></div>
 	</div>
-	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/maD3__fj6F4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+  <div id = "ompWeber">
+	   <iframe id = "ompWeberVid" src="https://www.youtube-nocookie.com/embed/maD3__fj6F4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+  <div id = "bozza">
+    <iframe id = "bozzaVid" src="https://www.youtube-nocookie.com/embed/csQQY-rea0I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+  <script src = "js/youtube.js"></script>
 
 </body>
 </html>
