added video caption/description that appears on hover

--- a/performances.html
+++ b/performances.html
@@ -7,13 +7,14 @@
 	<link rel = "stylesheet" href = "css/menuicon.css">
 	<link rel = "stylesheet" href = "css/navbar.css">
 	<link rel = "stylesheet" href = "css/youtube.css">
-	<!-- <style>
+	<style>
 	/* Not necessary if there isn't extra content below the page
 	::-webkit-scrollbar
 	{
 		width: 0 !important
-	} */
-	</style> -->
+	}  */
+
+	</style>
 </head>
 
 <body>
@@ -36,9 +37,11 @@
 	</div>
   <div id = "ompWeber">
 	   <iframe id = "ompWeberVid" src="https://www.youtube-nocookie.com/embed/maD3__fj6F4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+     <p id = "ompWeberCaption"><em>2nd prize performance of the Weber Bassoon Concerto, mvt. 1, at the <br> Oregon Mozart Players Concerto Competition.</em></p>
   </div>
   <div id = "bozza">
     <iframe id = "bozzaVid" src="https://www.youtube-nocookie.com/embed/csQQY-rea0I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p id = "bozzaCaption"><em>Performance of Bozza's Nocturne-Danse at Oregon State Solo competition.</em></p>
   </div>
 <script src = "js/youtube.js"></script>
 
