added menu icon into navbar for exit, plan to add code for clicking that <li> that makes the nav bar retreat and plan to fix the menu icon to white in the navbar and rearrange the two to look better

--- a/bassoonZone.html
+++ b/bassoonZone.html
@@ -20,12 +20,9 @@
 		<li style = "float:right"><a href = "contact.html">Contact Me</a></li>
 		<li style = "float:right"><a href = "socials.html">Socials</a></li>
 	</ul>
-	<div id = "menuicon" >
-	  <div class = "menuicon"></div>
-	  <div class = "menuicon"></div>
-	  <div class = "menuicon"></div>
-	</div>
+  <img id = menuicon src = "img/menuicon.png">
 
 
+  <script src = "js/navBar.js"></script>
 </body>
 </html>
