--- a/contact.html
+++ b/contact.html
@@ -76,11 +76,8 @@
 		<li style = "float:right"><a href = "contact.html">Contact Me</a></li>
 		<li style = "float:right"><a href = "socials.html">Socials</a></li>
 	</ul>
-	<div id = "menuicon" >
-	  <div class = "menuicon"></div>
-	  <div class = "menuicon"></div>
-	  <div class = "menuicon"></div>
-	</div>
+	<img id = menuicon src = "img/menuicon.png">
+
 	<h1>CONTACT ME</h1>
 
 	<p style = "text-align:center"> this doesn't work yet don't type anything</p>
@@ -102,5 +99,6 @@
 	frmvalidator.addValidation("email","req","Please provide your email");
 	frmvalidator.addValidation("email","email", "Please enter a valid email address");
 	</script>
+	<script src = "js/navBar.js"></script>
 </body>
 </html>
