--- a/performances.html
+++ b/performances.html
@@ -30,11 +30,8 @@
 		<li style = "float:right"><a href = "contact.html">Contact Me</a></li>
 		<li style = "float:right"><a href = "socials.html">Socials</a></li>
 	</ul>
-	<div id = "menuicon" >
-	  <div class = "menuicon"></div>
-	  <div class = "menuicon"></div>
-	  <div class = "menuicon"></div>
-	</div>
+  <img id = menuicon src = "img/menuicon.png">
+
   <div id = "ompWeber">
 	   <iframe id = "ompWeberVid" src="https://www.youtube-nocookie.com/embed/maD3__fj6F4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
      <p id = "ompWeberCaption"><em>2nd prize performance of the Weber Bassoon Concerto, mvt. 1, at the <br> Oregon Mozart Players Concerto Competition.</em></p>
@@ -43,8 +40,8 @@
     <iframe id = "bozzaVid" src="https://www.youtube-nocookie.com/embed/csQQY-rea0I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p id = "bozzaCaption"><em>Performance of Bozza's Nocturne-Danse at Oregon State Solo competition.</em></p>
   </div>
-<script src = "js/youtube.js"></script>
 
-
+  <script src = "js/youtube.js"></script>
+  <script src = "js/navBar.js"></script>
 </body>
 </html>
