--- a/reeds.html
+++ b/reeds.html
@@ -61,11 +61,8 @@
 		<li style = "float:right"><a href = "contact.html">Contact Me</a></li>
 		<li style = "float:right"><a href = "socials.html">Socials</a></li>
 	</ul>
-	<div id = "menuicon" >
-	  <div class = "menuicon"></div>
-	  <div class = "menuicon"></div>
-	  <div class = "menuicon"></div>
-	</div>
+	<img id = menuicon src = "img/menuicon.png">
+
 	<h1>BUY REEDS!</h1>
 
 	<h2 style = "text-align:center;">High quality reeds for a only $15 each.</h2>
@@ -87,5 +84,7 @@
 	<br>
 	<br>
 	<!-- <a class = "info" href = "reedinfo.html">More about my reeds</a> -->
+
+	<script src = "js/navBar.js"></script>
 </body>
 </html>
