--- a/socials.html
+++ b/socials.html
@@ -53,11 +53,8 @@ footer:hover
 		<li style = "float:right"><a href = "contact.html">Contact Me</a></li>
 		<li style = "float:right"><a href = "socials.html">Socials</a></li>
 	</ul>
-	<div id = "menuicon" >
-	  <div class = "menuicon"></div>
-	  <div class = "menuicon"></div>
-	  <div class = "menuicon"></div>
-	</div>
+	<img id = menuicon src = "img/menuicon.png">
+
 </div>
 <br>
 <br>
@@ -82,5 +79,6 @@ footer:hover
   <p style = "font-family:arial">Made with <a style = "color:black" target = "blank" href = "https://www.image-map.net">image-map.net</a></p>
 <footer>
 
+	<script src = "js/navBar.js"></script>
 </body>
 </html>
