--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Home</title>
 	<link rel = "stylesheet" href = "css/bknd.css">
-	<link rel = "stylesheet" href = "css/menuicon.css">
+	<!-- <link rel = "stylesheet" href = "css/menuicon.css"> -->
 	<link rel = "stylesheet" href = "css/navbar.css">
 	<style>
 	/* Not necessary if there isn't extra content below the page
@@ -46,22 +46,25 @@
 <body>
 	<div>
 		<ul id = "navBar">
-			<li><a href = "index.html">Home</a></li>
-			<li class = "dropdown">
+			<li class = "leftSide"><a href = "index.html">Home</a></li>
+			<li class = "leftSide" class = "dropdown">
 				<a href = "music.html" class = "dropbtn">Music</a>
 				<div class = "dropdown-content">
 					<a href = "performances.html">Performances</a>
 					<a href = "bassoonZone.html">Bassoon Zone</a>
 					<a href = "reeds.html">Reeds</a>
 			</li>
-			<li style = "float:right"><a href = "contact.html">Contact Me</a></li>
-			<li style = "float:right"><a href = "socials.html">Socials</a></li>
+			<li class = "rightSide" id = "menuIconLi">	<img id = menuiconNavBar src = "img/menuicon.png"> </li>
+			<li class = "rightSide"><a href = "contact.html">Contact Me</a></li>
+			<li class = "rightSide"><a href = "socials.html">Socials</a></li>
+
 		</ul>
 	</div>
 	<img id = menuicon src = "img/menuicon.png">
 	<h1 id = "welcome">WELCOME</h1>
+	<h1>finish menuicon</h1>
 	<img id = "name" src = "img/signature.png">
-	<!-- <script src = "js/navBar.js"></script> -->
+	<script src = "js/navBar.js"></script>
 
 </body>
 </html>
