--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
 	<div>
 		<ul id = "navBar">
 			<li class = "leftSide"><a href = "index.html">Home</a></li>
-			<li class = "leftSide" class = "dropdown">
+			<li class = "leftSide dropdown"> <!-- multiple classes, put a space -->
 				<a href = "music.html" class = "dropbtn">Music</a>
 				<div class = "dropdown-content">
 					<a href = "performances.html">Performances</a>
 					<a href = "bassoonZone.html">Bassoon Zone</a>
 					<a href = "reeds.html">Reeds</a>
 			</li>
-			<li class = "rightSide" id = "menuIconLi">	<img id = menuiconNavBar src = "img/menuicon.png"> </li>
+			<li class = "rightSide" id = "menuIconLi">	<img id = menuiconWhite src = "img/menuiconwhite.png"> </li>
 			<li class = "rightSide"><a href = "contact.html">Contact Me</a></li>
 			<li class = "rightSide"><a href = "socials.html">Socials</a></li>
 
