--- a/socials.html
+++ b/socials.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Socials</title>
 <link rel = "stylesheet" href = "css/bknd.css">
-<link rel = "stylesheet" href = "css/menuicon.css">
+<!-- <link rel = "stylesheet" href = "css/menuicon.css"> -->
 <link rel = "stylesheet" href = "css/navbar.css">
 <style>
 /* Not necessary if there isn't extra content below the page
@@ -42,16 +42,18 @@ footer:hover
 <body>
 <div>
 	<ul id = "navBar">
-		<li><a href = "index.html">Home</a></li>
-		<li class = "dropdown">
+		<li class = "leftSide"><a href = "index.html">Home</a></li>
+		<li class = "leftSide dropdown">
 			<a href = "music.html" class = "dropbtn">Music</a>
 			<div class = "dropdown-content">
 				<a href = "performances.html">Performances</a>
 				<a href = "bassoonZone.html">Bassoon Zone</a>
 				<a href = "reeds.html">Reeds</a>
 		</li>
-		<li style = "float:right"><a href = "contact.html">Contact Me</a></li>
-		<li style = "float:right"><a href = "socials.html">Socials</a></li>
+		<li class = "rightSide" id = "menuIconLi">	<img id = menuiconWhite src = "img/menuiconwhite.png"> </li>
+		<li class = "rightSide"><a href = "contact.html">Contact Me</a></li>
+		<li class = "rightSide"><a href = "socials.html">Socials</a></li>
+
 	</ul>
 	<img id = menuicon src = "img/menuicon.png">
 
