Added links to subpages of music on the music page. Changed some text to use vh instead of % for responsive layout.

--- a/music.html
+++ b/music.html
@@ -7,6 +7,7 @@
 	<!-- <link rel = "stylesheet" href = "css/menuicon.css"> -->
 	<link rel = "stylesheet" href = "css/navbar.css">
 	<link rel = "stylesheet" href = "css/youtube.css">
+	<link rel= "stylesheet" href= "css/music.css">
 	<style>
 	/* Not necessary if there isn't extra content below the page
 	::-webkit-scrollbar
@@ -21,15 +22,48 @@
 		<li class = "leftSide dropdown">
 			<a href = "music.html" class = "dropbtn">Music</a>
 			<div class = "dropdown-content">
-				<a href = "performances.html">Performances</a>
 				<a href = "bassoonZone.html">Bassoon Zone</a>
-				<a href = "reeds.html">Reeds</a>
+				<a href = "performances.html">Performances</a>
+        <a href = "reeds.html">Reeds</a>
 		</li>
 		<li class = "rightSide" id = "menuIconLi">	<img id = menuiconWhite src = "img/menuiconwhite.png"> </li>
 		<li class = "rightSide"><a href = "contact.html">Contact Me</a></li>
 		<li class = "rightSide"><a href = "socials.html">Socials</a></li>
 	</ul>
 	<img id = menuicon src = "img/menuicon.png">
+<br>
+
+	<table class = "musicMenu">
+		<tr class = "musicMenu">
+			<td>
+				<a href="bassoonZone.html" class="musicMenu" id = "bassoonZone">BASSOON ZONE</a>
+			</td>
+		</tr class = "musicMenu">
+		<tr>
+			<td>
+				<a href="performances.html" class="musicMenu" id = "performances">PERFORMANCES</a>
+			</td>
+		</tr>
+		<tr class = "musicMenu">
+			<td>
+				<a href="reeds.html" class="musicMenu" id = "reeds">REEDS</a>
+			</td>
+		</tr>
+	</table>
+
+
+
+	<!-- <ul>
+		<li class = "musicMenu">
+			<a href="bassoonZone.html" class="musicMenu" id = "bassoonZone">Bassoon Zone</a>
+		</li>
+		<li class = "musicMenu">
+			<a href="performances.html" class="musicMenu" id = "performances">Performances</a>
+		</li>
+		<li class = "musicMenu">
+			<a href="reeds.html" class="musicMenu" id = "reeds">Reeds</a>
+		</li>
+	</ul> -->
 
 
 	<script src = "js/navBar.js"></script>
