--- a/performances.html
+++ b/performances.html
@@ -6,7 +6,7 @@
 	<link rel = "stylesheet" href = "css/bknd.css">
 	<!-- <link rel = "stylesheet" href = "css/menuicon.css"> -->
 	<link rel = "stylesheet" href = "css/navbar.css">
-	<link rel = "stylesheet" href = "css/youtube.css">
+	<link rel = "stylesheet" href = "css/youtubeVideos.css">
 	<style>
 	/* Not necessary if there isn't extra content below the page
 	::-webkit-scrollbar
@@ -23,8 +23,8 @@
     <li class = "leftSide dropdown">
       <a href = "music.html" class = "dropbtn">Music</a>
       <div class = "dropdown-content">
-        <a href = "performances.html">Performances</a>
-        <a href = "bassoonZone.html">Bassoon Zone</a>
+				<a href = "bassoonZone.html">Bassoon Zone</a>
+				<a href = "performances.html">Performances</a>
         <a href = "reeds.html">Reeds</a>
     </li>
     <li class = "rightSide" id = "menuIconLi">	<img id = menuiconWhite src = "img/menuiconwhite.png"> </li>
