--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	{
 		display: inline-block;
 		text-align: center;
-		font-size: 700%;
+		font-size: 20vh;
 		position: relative;
 		left: 50%;
 		transform: translateX(-50%) translateY(75%);
@@ -50,9 +50,9 @@
 			<li class = "leftSide dropdown"> <!-- multiple classes, put a space -->
 				<a href = "music.html" class = "dropbtn">Music</a>
 				<div class = "dropdown-content">
-					<a href = "performances.html">Performances</a>
 					<a href = "bassoonZone.html">Bassoon Zone</a>
-					<a href = "reeds.html">Reeds</a>
+					<a href = "performances.html">Performances</a>
+	        <a href = "reeds.html">Reeds</a>
 			</li>
 			<li class = "rightSide" id = "menuIconLi">	<img id = menuiconWhite src = "img/menuiconwhite.png"> </li>
 			<li class = "rightSide"><a href = "contact.html">Contact Me</a></li>
@@ -62,7 +62,7 @@
 	</div>
 	<img id = menuicon src = "img/menuicon.png">
 	<h1 id = "welcome">WELCOME</h1>
-	<h1>finish menuicon</h1>
+	<h1>finish mu</h1>
 	<img id = "name" src = "img/signature.png">
 	<script src = "js/navBar.js"></script>
 
