--- a/socials.html
+++ b/socials.html
@@ -46,9 +46,9 @@ footer:hover
 		<li class = "leftSide dropdown">
 			<a href = "music.html" class = "dropbtn">Music</a>
 			<div class = "dropdown-content">
-				<a href = "performances.html">Performances</a>
 				<a href = "bassoonZone.html">Bassoon Zone</a>
-				<a href = "reeds.html">Reeds</a>
+				<a href = "performances.html">Performances</a>
+        <a href = "reeds.html">Reeds</a>
 		</li>
 		<li class = "rightSide" id = "menuIconLi">	<img id = menuiconWhite src = "img/menuiconwhite.png"> </li>
 		<li class = "rightSide"><a href = "contact.html">Contact Me</a></li>
@@ -66,7 +66,7 @@ footer:hover
 <br>
 <br>
 <br>
-<img class = "Socialmap" src="img/socialmap.png" alt="Socials" usemap="#Socialmap">
+<!-- <img class = "Socialmap" src="img/socialmap.png" alt="Socials" usemap="#Socialmap"> -->
 <map name="Socialmap">
     <area target="_blank" alt="Youtube" title="Youtube" href="https://m.youtube.com/channel/UC7yNY3Pla4gboKdtLUVT_iQ" coords="499,194,284,64" shape="rect">
     <area target="_blank" alt="Instagram" title="Instagram" href="https://www.instagram.com/turbo_zlurp/" coords="810,188,669,40" shape="rect">
