Formatting, switched socials to about me, made navbar responsive, positioned menuicons, tried to make contact form responsive

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Title</title>
-	<link rel = "stylesheet" href = "css/bknd.css">
-	<link rel = "stylesheet" href = "css/menuicon.css">
+	<title>About Me</title>
+  <link rel = "stylesheet" href = "css/bknd.css">
+  <link rel = "stylesheet" href = "css/menuicon.css">
 	<link rel = "stylesheet" href = "css/navbar.css">
+  <link rel= "stylesheet" href= "css/aboutMe.css">
 </head>
 <body>
 	<ul id = "navBar">
@@ -22,6 +23,8 @@
 		<li class = "rightSide"><a href = "aboutMe.html">About Me</a></li>
 	</ul>
 	<img id = menuicon src = "img/menuicon.png">
+  <br>
+  <img id = "headshot" src="img/blankHeadshot.png" alt="Photo of me">
 
 <script src = "js/navbar.js"></script>
 
