--- a/index.html
+++ b/index.html
@@ -12,35 +12,6 @@
 	{
 		width: 0 !important
 	} */
-
-	#welcome
-	{
-		display: inline-block;
-		text-align: center;
-		font-size: 20vh;
-		position: relative;
-		left: 50%;
-		transform: translateX(-50%) translateY(75%);
-		transition: 0.5s;
-	}
-	#name
-	{
-		width: 10%;
-		display: block;
-	 	margin-left: auto;
-	  	margin-right: auto;
-		opacity: 0;
-	  transform: translateY(200%);
-		transition: 0.5s;
-	}
-	#welcome:hover
-	{
-		opacity: 0;
-	}
-	#name:hover
-	{
-		opacity: 1;
-	}
 	</style>
 </head>
 <body>
@@ -56,13 +27,13 @@
 			</li>
 			<li class = "rightSide" id = "menuIconLi">	<img id = menuiconWhite src = "img/menuiconwhite.png"> </li>
 			<li class = "rightSide"><a href = "contact.html">Contact Me</a></li>
-			<li class = "rightSide"><a href = "socials.html">Socials</a></li>
+			<li class = "rightSide"><a href = "aboutMe.html">About Me</a></li>
 
 		</ul>
 	</div>
 	<img id = menuicon src = "img/menuicon.png">
 	<h1 id = "welcome">WELCOME</h1>
-	<h1>finish mu</h1>
+	<h1>TODO: <br>make contact form functional and responsive<br>make mobile version</h1>
 	<img id = "name" src = "img/signature.png">
 	<script src = "js/navBar.js"></script>
 
