--- a/music.html
+++ b/music.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>music</title>
+	<title>Music</title>
 	<link rel = "stylesheet" href = "css/bknd.css">
 	<!-- <link rel = "stylesheet" href = "css/menuicon.css"> -->
 	<link rel = "stylesheet" href = "css/navbar.css">
@@ -28,9 +28,10 @@
 		</li>
 		<li class = "rightSide" id = "menuIconLi">	<img id = menuiconWhite src = "img/menuiconwhite.png"> </li>
 		<li class = "rightSide"><a href = "contact.html">Contact Me</a></li>
-		<li class = "rightSide"><a href = "socials.html">Socials</a></li>
+		<li class = "rightSide"><a href = "aboutMe.html">About Me</a></li>
 	</ul>
 	<img id = menuicon src = "img/menuicon.png">
+	
 <br>
 
 	<table class = "musicMenu">
@@ -50,7 +51,7 @@
 			</td>
 		</tr>
 	</table>
-
+	<!-- maybe add something that makes the labels move to uncover a short description of what each page is -->
 
 
 	<!-- <ul>
