--- a/performances.html
+++ b/performances.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>music</title>
+	<title>Performances</title>
 	<link rel = "stylesheet" href = "css/bknd.css">
 	<!-- <link rel = "stylesheet" href = "css/menuicon.css"> -->
 	<link rel = "stylesheet" href = "css/navbar.css">
@@ -29,11 +29,21 @@
     </li>
     <li class = "rightSide" id = "menuIconLi">	<img id = menuiconWhite src = "img/menuiconwhite.png"> </li>
     <li class = "rightSide"><a href = "contact.html">Contact Me</a></li>
-    <li class = "rightSide"><a href = "socials.html">Socials</a></li>
+    <li class = "rightSide"><a href = "aboutMe.html">About Me</a></li>
 
   </ul>
   <img id = menuicon src = "img/menuicon.png">
-<br>
+
+	<br>
+
+	<h1 id = "performancesHeading">PERFORMANCES</h1>
+	<div class = "description">
+		<h3>My performances at various concerts and competitions</h3>
+		<a href="https://www.youtube.com/channel/UC7yNY3Pla4gboKdtLUVT_iQ" target = "_blank">View on Youtube</a>
+	</div>
+
+	<br>
+
   <div id = "ompWeber">
 	   <iframe id = "ompWeberVid" src="https://www.youtube-nocookie.com/embed/maD3__fj6F4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
      <p id = "ompWeberCaption"><em>2nd prize performance of the Weber Bassoon Concerto, mvt. 1, at the <br> Oregon Mozart Players Concerto Competition.</em></p>
