--- a/reeds.html
+++ b/reeds.html
@@ -2,25 +2,15 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Buy reeds!</title>
+	<title>Buy Reeds!</title>
 	<link rel = "stylesheet" href = "css/bknd.css">
 	<!-- <link rel = "stylesheet" href = "css/menuicon.css"> -->
 	<link rel = "stylesheet" href = "css/navbar.css">
 	<style>
-	::-webkit-scrollbar
+	/* ::-webkit-scrollbar
 	{
 		width: 0 !important
-	}
-	h1
-	{
-	display: inline-block;
-	text-align: center;
-	font-size: 700%;
-	position: relative;
-	left: 50%;
-	transform: translateX(-50%) translateY(75%);
-	transition: 0.5s;
-	}
+	} */
 	form.paypal
 	{
 		text-align: center;
@@ -60,19 +50,21 @@
 		</li>
 		<li class = "rightSide" id = "menuIconLi">	<img id = menuiconWhite src = "img/menuiconwhite.png"> </li>
 		<li class = "rightSide"><a href = "contact.html">Contact Me</a></li>
-		<li class = "rightSide"><a href = "socials.html">Socials</a></li>
+		<li class = "rightSide"><a href = "aboutMe.html">About Me</a></li>
 
 	</ul>
 	<img id = menuicon src = "img/menuicon.png">
 
-	<h1>BUY REEDS!</h1>
+	<br>
 
-	<h2 style = "text-align:center;">High quality reeds for a only $15 each.</h2>
-	<p style = "text-align:center;"><i>In person delivery available in Salem, OR</i></p>
-	<h2 style = "text-align:center;">
+	<h1 id = "reedsHeading">BUY REEDS</h1>
+
+	<h2 style = "text-align:center">High quality reeds for a only $15 each.</h2>
+	<p style = "text-align:center"><i>In person delivery available in Salem, OR</i></p>
+	<h2 style = "text-align:center">
 		HOW TO BUY
 	</h2>
-	<p style = "text-align:center;">
+	<p style = "text-align:center">
 		Send an email at <b>teddyaolinezhang@gmail.com</b> that contains: <br>name, <br> number of reeds, <br> delivery method (pick-up location or delivery address), <br> questions
 		Then, send payment through PayPal:
 	</p>
