--- a/bassoonZone.html
+++ b/bassoonZone.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>music</title>
+	<title>Bassoon Zone</title>
 	<link rel = "stylesheet" href = "css/bknd.css">
 	<!-- <link rel = "stylesheet" href = "css/menuicon.css"> -->
 	<link rel = "stylesheet" href = "css/navbar.css">
@@ -20,12 +20,22 @@
     </li>
     <li class = "rightSide" id = "menuIconLi">	<img id = menuiconWhite src = "img/menuiconwhite.png"> </li>
     <li class = "rightSide"><a href = "contact.html">Contact Me</a></li>
-    <li class = "rightSide"><a href = "socials.html">Socials</a></li>
+    <li class = "rightSide"><a href = "aboutMe.html">About Me</a></li>
 
   </ul>
   <img id = menuicon src = "img/menuicon.png">
 
-<br>
+	<br>
+
+	<h1 id = "bassoonZoneHeading">BASSOOON ZONE</h1>
+	<div class = "description">
+		<h3>Masterclasses and Q&As with eminent bassoonists, livestreamed weekly.</h3>
+		<a id = "bsnzoneYoutube" href="https://www.youtube.com/channel/UC7yNY3Pla4gboKdtLUVT_iQ" target="_blank">View on Youtube</a>
+		<a id = "bsnzoneFacebook" href="https://www.facebook.com/bsnzone/" target="_blank">View on Facebook</a>
+	</div>
+
+	<br>
+
   <div id = "andrewBrady">
 	   <iframe id = "andrewBradyVid" src="https://www.youtube-nocookie.com/embed/SiPqc8aP1fE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
      </iframe>
